fixed overflow on genre tags

--- a/Blazor/Pages/MediaSearchForm.razor.css
+++ b/Blazor/Pages/MediaSearchForm.razor.css
@@ -14,6 +14,12 @@
     gap: 7px;
 }
 
+.genre-wrap {
+    white-space: nowrap;        
+    overflow: hidden;           
+    text-overflow: ellipsis;
+}
+
 .genre-suggestion {
     font-family: "Regular", sans-serif;
     font-size: 10px;
@@ -29,6 +35,7 @@
     display: flex;
     align-items: center;
     text-transform: uppercase;
+    max-width: 100px;
 }
 .selected-genre {
     font-family: "Regular", sans-serif;
@@ -47,6 +54,7 @@
     gap: 3px;
     align-items: center;
     text-transform: uppercase;
+    max-width: 80px;
 }
 
 
